[PPC64] VerifyOops code in C1 doesn't work with ZGC

XMLWordPrintable

    • gc
    • b16
    • ppc

        Running the VM with "-XX:+UseZGC -XX:+VerifyOops -XX:TieredStopAtLevel=1 -Xcomp" causes a fatal error: c1_LIRAssembler_ppc.cpp:824. oop: 0x0001000000600e80
        The oop is checked without load barrier. ZHeap::print_location reports it as "is a bad oop" in hs_err files.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: