8304880: [PPC64] VerifyOops code in C1 doesn't work with ZGC

Reviewed-by: rrich
Backport-of: 695683b5b15c69a56fe7ee1a93482fe7c3530ca8